--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,7 +7,7 @@ set(CMAKE_EXE_LINKER_FLAGS "-static-libgcc -static-libstdc++")
 include_directories(${PROJECT_SOURCE_DIR}/include)
 link_directories(${PROJECT_SOURCE_DIR}/lib)
 
-set(SOURCE_FILES main.cpp Cell.h Cell.cpp MazeGenerator.h MazeGenerator.cpp)
+set(SOURCE_FILES main.cpp Cell.h Cell.cpp MazeGenerator.h MazeGenerator.cpp MazeSolver.cpp MazeSolver.h)
 add_executable(MazeSolver ${SOURCE_FILES})
 
 target_link_libraries(MazeSolver SDL2main SDL2)
